--- a/ProjetSession/AjouterEmploye.xaml
+++ b/ProjetSession/AjouterEmploye.xaml
@@ -12,7 +12,7 @@
     <Grid>
         <ScrollViewer>
             <StackPanel HorizontalAlignment="Center" Orientation="Vertical">
-                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrer les informations</TextBlock>
+                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrez les informations</TextBlock>
 
                 <TextBox x:Name="tbxNom" Header="Nom"></TextBox>
                 <TextBlock x:Name="errNom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
@@ -20,7 +20,7 @@
                 <TextBox x:Name="tbxPrenom" Header="Prénom"></TextBox>
                 <TextBlock x:Name="errPrenom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <CalendarDatePicker x:Name="dtDateNaiss" Width="400" Header="Date de naissance"></CalendarDatePicker>
+                <CalendarDatePicker x:Name="cdpNaiss" Width="400" Header="Date de naissance"></CalendarDatePicker>
                 <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
                 <TextBox x:Name="tbxEmail" Header="Email"></TextBox>
@@ -29,7 +29,7 @@
                 <TextBox x:Name="tbxAdresse" Header="Adresse"></TextBox>
                 <TextBlock x:Name="errAdresse" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <CalendarDatePicker x:Name="calDateEmb" Width="400" Header="Date d'embauche"></CalendarDatePicker>
+                <CalendarDatePicker x:Name="cdpEmb" Width="400" Header="Date d'embauche"></CalendarDatePicker>
                 <TextBlock x:Name="errEmbauche" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
                 <TextBox x:Name="tbxTaux" Header="Taux"></TextBox>
