--- a/ProjetSession/AjouterEmploye.xaml
+++ b/ProjetSession/AjouterEmploye.xaml
@@ -20,7 +20,7 @@
                 <TextBox x:Name="tbxPrenom" Header="Prénom"></TextBox>
                 <TextBlock x:Name="errPrenom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <CalendarDatePicker x:Name="cdpNaiss" Width="400" Header="Date de naissance"></CalendarDatePicker>
+                <CalendarDatePicker x:Name="cdpNaiss" Width="400" Header="Date de naissance" PlaceholderText=""></CalendarDatePicker>
                 <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
                 <TextBox x:Name="tbxEmail" Header="Email"></TextBox>
@@ -29,7 +29,7 @@
                 <TextBox x:Name="tbxAdresse" Header="Adresse"></TextBox>
                 <TextBlock x:Name="errAdresse" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <CalendarDatePicker x:Name="cdpEmb" Width="400" Header="Date d'embauche"></CalendarDatePicker>
+                <CalendarDatePicker x:Name="cdpEmb" Width="400" Header="Date d'embauche" PlaceholderText=""></CalendarDatePicker>
                 <TextBlock x:Name="errEmbauche" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
                 <TextBox x:Name="tbxTaux" Header="Taux"></TextBox>
@@ -42,12 +42,12 @@
                     <x:String>Journalier</x:String>
                     <x:String>Permanent</x:String>
                 </ComboBox>
+                <TextBlock x:Name="errStatut" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <ComboBox Header="Projet" x:Name="cbxProjet" Width="400" Margin="0 30 0 10">
+                <ComboBox Header="Projet" x:Name="cbxProjet" Width="400" Margin="0 30 0 10" >
                     <x:String></x:String>
                 </ComboBox>
 
-                <TextBlock x:Name="errStatut" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
             </StackPanel>
         </ScrollViewer>
     </Grid>
