--- a/ProjetSession/MainWindow.xaml
+++ b/ProjetSession/MainWindow.xaml
@@ -36,4 +36,7 @@
         </NavigationView>
 
     </Grid>
+    <Window.SystemBackdrop>
+        <DesktopAcrylicBackdrop />
+    </Window.SystemBackdrop>
 </Window>
