--- a/ProjetSession/PageAfficherClient.xaml
+++ b/ProjetSession/PageAfficherClient.xaml
@@ -26,9 +26,9 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="local:Client">
                             <StackPanel CornerRadius="10" Padding="10" Orientation="Vertical" Height="100" Margin="10 10 10 20">
-                                <TextBlock Text="{x:Bind Id_Client, Mode=TwoWay}" FontWeight="Light" FontSize="15pt" Foreground="WhiteSmoke"/>
-                                <TextBlock Text="{x:Bind Nom, Mode=TwoWay}" FontSize="30pt" TextWrapping="Wrap" Foreground="White" FontWeight="SemiBold"/>
-                                <TextBlock FontSize="25pt" Foreground="White" Text="{x:Bind Num_Tel, Mode=TwoWay}"/>
+                                <TextBlock Text="{x:Bind Id_Client, Mode=TwoWay}" FontWeight="Light" FontSize="15pt" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
+                                <TextBlock Text="{x:Bind Nom, Mode=TwoWay}" FontSize="30pt" TextWrapping="Wrap" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}" FontWeight="SemiBold"/>
+                                <TextBlock FontSize="25pt" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}" Text="{x:Bind Num_Tel, Mode=TwoWay}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
