--- a/ProjetSession/AjoutProjetContent.xaml
+++ b/ProjetSession/AjoutProjetContent.xaml
@@ -12,8 +12,9 @@
 
     <Grid>
         <ScrollViewer>
-            <StackPanel HorizontalAlignment="Center" Orientation="Vertical">  
-
+            <StackPanel HorizontalAlignment="Center" Orientation="Vertical">
+                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrez les informations suivantes (obligatoire)</TextBlock>
+                
                 <TextBox x:Name="tbTitre" Header="Titre"/>
                 <TextBlock x:Name="errTitre" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
             
