--- a/ProjetSession/AjouterEmploye.xaml
+++ b/ProjetSession/AjouterEmploye.xaml
@@ -13,39 +13,40 @@
     <Grid>
         <ScrollViewer>
             <StackPanel HorizontalAlignment="Center" Orientation="Vertical">
-                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrez les informations</TextBlock>
+                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrez les informations suivantes (obligatoire):</TextBlock>
 
                 <TextBox x:Name="tbxNom" Header="Nom"></TextBox>
-                <TextBlock x:Name="errNom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+                <TextBlock x:Name="errNom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"/>
 
                 <TextBox x:Name="tbxPrenom" Header="Prénom"></TextBox>
-                <TextBlock x:Name="errPrenom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errPrenom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <CalendarDatePicker x:Name="cdpNaiss" Width="400" Header="Date de naissance" PlaceholderText=""></CalendarDatePicker>
-                <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <TextBox x:Name="tbxEmail" Header="Email"></TextBox>
-                <TextBlock x:Name="errEmail" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errEmail" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <TextBox x:Name="tbxAdresse" Header="Adresse"></TextBox>
-                <TextBlock x:Name="errAdresse" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errAdresse" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <CalendarDatePicker x:Name="cdpEmb" Width="400" Header="Date d'embauche" PlaceholderText=""></CalendarDatePicker>
-                <TextBlock x:Name="errEmbauche" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errEmbauche" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <TextBox x:Name="tbxTaux" Header="Taux"></TextBox>
-                <TextBlock x:Name="errTaux" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errTaux" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <TextBox x:Name="tbxPhoto" Header="Photo"></TextBox>
-                <TextBlock x:Name="errPhoto" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errPhoto" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
                 <ComboBox x:Name="cbxStatut" Width="400" Header="Statut">
                     <x:String>Journalier</x:String>
                     <x:String>Permanent</x:String>
                 </ComboBox>
-                <TextBlock x:Name="errStatut" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
+                <TextBlock x:Name="errStatut" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"/>
 
-                <ComboBox Header="Projet" x:Name="cbxProjet" Width="400" Margin="0 30 0 10" DisplayMemberPath="Titre" x:DefaultBindMode="OneWay">
+                <TextBlock FontSize="12pt" Margin="0 0 0 20">Information optionnel:</TextBlock>
+                <ComboBox Header="Projet" x:Name="cbxProjet" Width="400" Margin="0 0 0 0" DisplayMemberPath="Titre" x:DefaultBindMode="OneWay">
                 </ComboBox>
 
             </StackPanel>
