--- a/ProjetSession/AjoutProjetContent.xaml
+++ b/ProjetSession/AjoutProjetContent.xaml
@@ -13,7 +13,7 @@
     <Grid>
         <ScrollViewer>
             <StackPanel HorizontalAlignment="Center" Orientation="Vertical">
-                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrez les informations suivantes (obligatoire)</TextBlock>
+                <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrez les informations suivantes (obligatoire):</TextBlock>
                 
                 <TextBox x:Name="tbTitre" Header="Titre"/>
                 <TextBlock x:Name="errTitre" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
