couleurs des statut de projet

--- a/ProjetSession/PageAfficherProjet.xaml
+++ b/ProjetSession/PageAfficherProjet.xaml
@@ -41,8 +41,8 @@
                                     </TextBlock>
 
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                        <TextBlock x:Name="statut" SizeChanged="statut_SizeChanged" Text="{x:Bind Statut}" FontWeight="SemiBold" Margin="0 0 20 0" FontSize="15pt"  Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
-                                        <Ellipse x:Name="couleur" Width="8" Height="8" Margin="0 2 0 0" Fill="Green" VerticalAlignment="Center"/>
+                                        <TextBlock x:Name="statut" Text="{x:Bind Statut}" FontWeight="SemiBold" Margin="0 0 20 0" FontSize="15pt" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
+                                        <Ellipse Width="8" Height="8" Margin="0 2 0 0" Fill="{x:Bind EllipseColor}" VerticalAlignment="Center"/>
                                     </StackPanel>
 
                                     <ScrollViewer>
