projet est lié avec ses employés

--- a/ProjetSession/PageAfficherProjet.xaml
+++ b/ProjetSession/PageAfficherProjet.xaml
@@ -46,8 +46,10 @@
                                     </StackPanel>
 
                                     <ScrollViewer>
-                                        <ListView CornerRadius="3" ItemsSource="">
-                                            <TextBlock></TextBlock>
+                                        <ListView CornerRadius="3" ItemsSource="{Binding ListeEmploye}">
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding NomComplet}"/>
+                                            </DataTemplate>
                                         </ListView>
                                     </ScrollViewer>
                                 </StackPanel>
